# barkley-pipe-flow

./: .gitattributes  .gitignore  LICENSE  README.md  ROADMAP.md  VALIDATION.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: reference_values.json
data/reference_curves/: README.md  barkley2011_fig5a_tau_decay.json
figures/: rc_sweep.csv  statistics_sweep.csv
notebooks/: 01_continuous_regimes.ipynb  02_space_time_diagrams.ipynb  03_phase2_roadmap.ipynb  04_survival_statistics.ipynb
scripts/: make_comparison_figure.py  make_discrete_figures.py  make_figures.py  make_statistics_figures.py  regime_front_speed.py  validate_against_figure.py
src/barkley_pipe/: __init__.py  continuous.py  diagnostics.py  discrete.py  nullclines.py  operators.py  plotting.py  reference_curves.py  reference_data.py  statistics.py
tests/: test_continuous.py  test_diagnostics.py  test_discrete.py  test_nullclines.py  test_operators.py  test_phase2_stubs.py  test_reference_curves.py  test_reference_validation.py  test_statistics.py  test_verification.py
